feat: bump tiny-vue version (#1008)

--- a/packages/block-compiler/index.html
+++ b/packages/block-compiler/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>block-compiler</title>
-    <link rel="stylesheet" href="https://unpkg.com/@opentiny/vue-theme@3.14/index.css" />
+    <link rel="stylesheet" href="https://unpkg.com/@opentiny/vue-theme@3.20/index.css" />
     <script type="importmap">
       {
         "imports": {
@@ -19,11 +19,11 @@
           "@opentiny/tiny-engine-i18n-host": "https://unpkg.com/@opentiny/tiny-engine-i18n-host@1/dist/lowcode-design-i18n-host.es.js",
           "@opentiny/tiny-engine-builtin-component": "https://unpkg.com/@opentiny/tiny-engine-builtin-component@^2.0.0/dist/index.js",
           "pinia": "https://unpkg.com/pinia@2.0.22/dist/pinia.esm-browser.js",
-          "@opentiny/vue": "https://unpkg.com/@opentiny/vue@3.14/runtime/tiny-vue.mjs",
-          "@opentiny/vue-icon": "https://unpkg.com/@opentiny/vue@3.14/runtime/tiny-vue-icon.mjs",
-          "@opentiny/vue-common": "https://unpkg.com/@opentiny/vue@3.14/runtime/tiny-vue-common.mjs",
-          "@opentiny/vue-locale": "https://unpkg.com/@opentiny/vue@3.14/runtime/tiny-vue-locale.mjs",
-          "@opentiny/vue-renderless/": "https://unpkg.com/@opentiny/vue-renderless@3.14/"
+          "@opentiny/vue": "https://unpkg.com/@opentiny/vue-runtime@3.20/dist3/tiny-vue-pc.mjs",
+          "@opentiny/vue-icon": "https://unpkg.com/@opentiny/vue-runtime@3.20/dist3/tiny-vue-icon.mjs",
+          "@opentiny/vue-common": "https://unpkg.com/@opentiny/vue-runtime@3.20/dist3/tiny-vue-common.mjs",
+          "@opentiny/vue-locale": "https://unpkg.com/@opentiny/vue-runtime@3.20/dist3/tiny-vue-locale.mjs",
+          "@opentiny/vue-renderless/": "https://unpkg.com/@opentiny/vue-renderless@3.20/"
         }
       }
     </script>
